fix number list on small width

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -26,9 +26,7 @@
     padding: 16px;
     padding-left: auto;
 
-    @include onTablet {
-      padding: 32px;
-    }
+    
 
     @media (min-height: 680px) {
       gap: 80px;
@@ -38,14 +36,13 @@
       gap: 160px;
     }
 
+    @include onTablet {
+      padding: 32px;
+    }
     @include onDesktop {
       padding: 32px 64px;
       justify-content: space-between;
-
-      
     }
-
-    
   }
 
   &__info {
@@ -118,6 +115,6 @@
   }
 
   &__number-list {
-    padding: 0;
+    margin: 0 auto;
   }
 }
