--- a/src/styles/blocks/number-list.scss
+++ b/src/styles/blocks/number-list.scss
@@ -1,7 +1,7 @@
 .number-list {
   position: relative;
   bottom: 0;
-  left: 50%;
+  left: 25%;
   transform: translateX(-50%);
   display: flex;
   list-style: none;
